fixed spacing of sections

--- a/app.css
+++ b/app.css
@@ -88,6 +88,19 @@ body {
   padding-bottom: 50px;
 }
 
+.education-title {
+  margin-bottom: 35px;
+}
+
+hr {
+  border: 0;
+  border-top: 1px solid white;
+  width: 50%;
+  margin: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 /* @media (min-width: 820px) {
   body {
     background: url("images/landing_page.jpg") no-repeat fixed 50%;
